beckend config test

--- a/client/result.html
+++ b/client/result.html
@@ -113,7 +113,7 @@
 
   <!-- Footer -->
   <footer class="bg-[#FFFD8F] text-center py-4 text-sm text-gray-500 border-t border-gray-200">
-    © 2025 HELBme | All Rights Reserved
+    © 2025 HELBme
   </footer>
 
   <script src="assets/js/result.js"></script>
