--- a/client/upload.html
+++ b/client/upload.html
@@ -82,12 +82,12 @@
         <input type="file" id="fileInput" name="file" accept=".png, .jpg, .jpeg" class="hidden" />
       </label>
 
-      <p id="fileName" class="text-sm text-slate-500 mt-2"></p>
+      <p id="fileName" class="text-2xl text-green-600 mt-2"></p>
 
       <button
         type="submit"
         id="analyzeBtn"
-        class="mt-6 w-full h-12 bg-primary text-white font-bold rounded-xl shadow-lg hover:shadow-primary/50 transition-shadow"
+        class="mt-6 w-full h-12 bg-primary text-white font-bold rounded-xl shadow-lg hover:shadow-primary/80 hover:text-black transition-shadow"
       >
         Analyze Screenshot
       </button>
@@ -104,6 +104,7 @@
 
   <!-- JavaScript -->
   <script src="assets/js/upload.js"></script>
+  
   <script>
     // Toggle dropdown menu
     const menuBtn = document.getElementById('menuBtn');
