--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 
   <!-- External Styles -->
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="client/assets/css/style.css"/>
 
   <script>
     tailwind.config = {
@@ -84,7 +84,7 @@
         <a href="upload.html" class="btn-primary mx-auto md:mx-0">Check a Message Now</a>
       </div>
       <div class="flex justify-center md:w-1/2">
-        <img src="assets/images/helb-high-resolution-logo.png"
+        <img src="client/assets/images/helb-high-resolution-logo.png"
              alt="HELB logo"
              class="rounded-xl shadow-lg w-full max-w-md" />
       </div>
@@ -142,6 +142,6 @@
   </footer>
 
   <!-- JS Scripts -->
-  <script src="assets/js/menu.js"></script>
+  <script src="client/assets/js/menu.js"></script>
 </body>
 </html>
