--- a/upload.html
+++ b/upload.html
@@ -103,7 +103,7 @@
   </footer>
 
   <!-- JavaScript -->
-  <script src="assets/js/upload.js"></script>
+  <script src="client/assets/js/upload.js"></script>
   
   <script>
     // Toggle dropdown menu
