--- a/result.html
+++ b/result.html
@@ -29,7 +29,7 @@
     };
   </script>
 
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="client/assets/css/style.css" />
 </head>
 
 <body class="bg-background font-display text-[#0d171b] flex flex-col min-h-screen">
@@ -82,6 +82,6 @@
     © 2025 HELBme
   </footer>
 
-  <script src="assets/js/result.js"></script>
+  <script src="client/assets/js/result.js"></script>
 </body>
 </html>
